# kingpin

./: .gitignore  LICENSE  README.md  pyproject.toml
src/kingpin/: __init__.py  game.py
tests/: test_game.py
